--- a/myvoting/voteapp/templates/base.html
+++ b/myvoting/voteapp/templates/base.html
@@ -29,9 +29,9 @@
 
                     <li class="nav-item"><a class="nav-link" href="#"><button class="btn btn-primary">Hi, {{request.user.username}}</button></a></li>
 
-                    {% comment %} <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}"><button class="btn btn-secondary">Logout</button></a></li> {% endcomment %}
+                     <li class="nav-item"><a class="nav-link" href="{% url 'signout' %}"><button class="btn btn-secondary">Logout</button></a></li>
                     
-                    {% comment %} {% else %} {% endcomment %}
+                    {% else %} 
                     <li class="nav-item"><a class="nav-link" href="{% url 'signin' %}"><button class="btn btn-primary">Login</button></a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}"><button class="btn btn-primary">SignUp</button></a></li>
                     
